--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://blist.vercel.app"
+baseurl = "https://eloicoquoz.github.io/labveilletech"
 metaDataFormat = "yaml"
 title = "LabVeilleTech - Eloi"
 theme = "blist"
