--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ DefaultContentLanguage = "fr"
 DefaultContentLanguageInSubdir = true
 [languages]
   [languages.en]
-    contentDir = "/labveilletech/content/en" #English
+    contentDir = "content/en" #English
     weight = 1
     languageName = "English"
     [languages.en.params]
