--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ DefaultContentLanguageInSubdir = true
       introTitle = "Hey! I'm Katheryn Fox"
       introSubtitle = "26 y/o junior developer who enjoys social card games, blogging and painting"
       introPhoto = "/labveilletech/picture.jpg"
-      logo = "/labveilletech/blist-logo.png"
+      logo = "/labveilletech/logo.png"
     [[languages.en.menu.main]]
         name = "Blog"
         url = "blog"
@@ -45,7 +45,7 @@ DefaultContentLanguageInSubdir = true
       introTitle = "Hallo, ich bin Katheryn Fox"
       introSubtitle = "26-jährige Junior-Entwicklerin, die Spaß an sozialen Kartenspielen, Bloggen und Malen hat"
       introPhoto = "/picture.jpg"
-      logo = "/blist-logo-de.png"
+      logo = "/labveilletech/logo.png"
     [[languages.de.menu.main]]
         name = "Blog"
         url = "blog"
@@ -69,7 +69,7 @@ DefaultContentLanguageInSubdir = true
       introTitle = "Salut! Je suis Eloi Coquoz"
       introSubtitle = "Développeuse junior de 26 ans qui adore les jeux de société, le blogging et la peinture"
       introPhoto = "/labveilletech/picture.jpg"
-      logo = "/labveilletech/blist-logo.png"
+      logo = "/labveilletech/logo.png"
     [[languages.fr.menu.main]]
         name = "Blog"
         url = "blog"
