--- a/config.toml
+++ b/config.toml
@@ -66,8 +66,8 @@ DefaultContentLanguageInSubdir = true
     weight = 1
     languageName = "Français"
     [languages.fr.params]
-      introTitle = "Salut! Je suis Eloi Coquoz"
-      introSubtitle = "Développeuse junior de 26 ans qui adore les jeux de société, le blogging et la peinture"
+      introTitle = "Salut ! Je suis Eloi Coquoz"
+      introSubtitle = "Ingénieur des médias de formation, je suis passionné par sport et la technologie. J'ai voulu commencer une formation dans le domaine du sport mais je me suis blessé et j'ai du changer de voie. Mon but est de pouvoir lier ces deux domaines dans mon métier."
       introPhoto = "/labveilletech/picture.jpg"
       logo = "/labveilletech/logo.png"
     [[languages.fr.menu.main]]
