--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,60 @@ theme = "blist"
 DefaultContentLanguage = "fr"
 DefaultContentLanguageInSubdir = true
 [languages]
- 
+  [languages.en]
+    contentDir = "content/en" #English
+    weight = 1
+    languageName = "English"
+    [languages.en.params]
+      introTitle = "Hey! I'm Katheryn Fox"
+      introSubtitle = "26 y/o junior developer who enjoys social card games, blogging and painting"
+      introPhoto = "/labveilletech/picture.jpg"
+      logo = "/labveilletech/logo.png"
+    [[languages.en.menu.main]]
+        name = "Blog"
+        url = "blog"
+        weight = 1
+
+    [[languages.en.menu.main]]
+        name = "About"
+        url = "page/about/"
+        weight = 2
+
+    [[languages.en.menu.main]]
+        name = "Tags"
+        url = "tags"
+        weight = 3
+
+    [[languages.en.menu.main]]
+        name = "Top Post"
+        url = "/en/blog/emoji-support/"
+        weight = 4
+
+  [languages.de]
+    contentDir = "content/de" # Deutsch
+    weight = 2
+    languageName = "Deutsch"
+    title = "Blist (mehrsprachig)"
+    description = "Modernes Blog-Theme für Ihre Hugo-Site."
+    [languages.de.params]
+      introTitle = "Hallo, ich bin Katheryn Fox"
+      introSubtitle = "26-jährige Junior-Entwicklerin, die Spaß an sozialen Kartenspielen, Bloggen und Malen hat"
+      introPhoto = "/picture.jpg"
+      logo = "/labveilletech/logo.png"
+    [[languages.de.menu.main]]
+        name = "Blog"
+        url = "blog"
+        weight = 1
+
+    [[languages.de.menu.main]]
+        name = "Über mich"
+        url = "page/about/"
+        weight = 2
+
+    [[languages.de.menu.main]]
+        name = "Tags"
+        url = "tags"
+        weight = 3
         
   [languages.fr]
     contentDir = "content/fr" #French
@@ -27,6 +80,10 @@ DefaultContentLanguageInSubdir = true
         url = "page/about/"
         weight = 2
 
+    [[languages.fr.menu.main]]
+        name = "Tags"
+        url = "tags"
+        weight = 3
 
 [params]
   # Enable the darkmode toggle in header
